Convert to dh_python2.
Closes: #708892

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gaduhistory
 Section: misc
 Priority: extra
 Maintainer: Marcin Owsiany <porridge@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), python-central, python
+Build-Depends: debhelper (>= 7.0.50~), python (>= 2.6.6-3~)
 Standards-Version: 3.9.2
 Homepage: https://github.com/socek/Gadu-History
 Vcs-Git: git://github.com/porridge/gaduhistory.git
