--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Marcin Owsiany <porridge@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), python (>= 2.6.6-3~)
 Standards-Version: 3.9.2
 Homepage: https://github.com/socek/Gadu-History
-Vcs-Git: git://github.com/porridge/gaduhistory.git
+Vcs-Git: git://github.com/porridge/gaduhistory.git -b debian
 
 Package: gaduhistory
 Architecture: all
