--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Debian QA Group <packages@qa.debian.org>
 Build-Depends: debhelper (>= 7.0.50~), python (>= 2.6.6-3~)
 Standards-Version: 3.9.5
 Homepage: https://github.com/socek/Gadu-History
-Vcs-Git: git://github.com/porridge/gaduhistory.git -b debian
+Vcs-Git: https://github.com/porridge/gaduhistory.git -b debian
 
 Package: gaduhistory
 Architecture: all
